--- a/_config.yml
+++ b/_config.yml
@@ -6,15 +6,15 @@
 title: Hexo
 subtitle:
 description:
-author: John Doe
-language:
+author: Victoria Hong 
+language: en
 timezone:
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://victoriahong.com
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :year/:month/:title/
 permalink_defaults:
 
 # Directory
