--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "hexo-renderer-ejs": "^0.2.0",
     "hexo-renderer-marked": "^0.2.10",
     "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+    "hexo-server": "^0.2.0",
+    "jquery": "^2.2.3",
+    "prompt": "^1.0.0"
   }
 }
