--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ branches:
   - master
 before_install:
 - openssl aes-256-cbc -K $encrypted_00bb88d476cb_key -iv $encrypted_00bb88d476cb_iv
-  -in .travis/vh1_rsa.enc -out ~/.ssh/vh1_rsa -d
+  -in vh1_rsa.enc -out ~/.ssh/vh1_rsa -d
 - chmod 600 ~/.ssh/vh1_rsa
 - eval $(ssh-agent)
 - ssh-add ~/.ssh/vh1_rsa
-- cp .travis/ssh_config ~/.ssh/config
+- cp ssh_config ~/.ssh/config
 - git config --global user.name "VictoriaHong"
 - git config --global user.email "xin.victoria.hong@gmail.com"
 install:
@@ -20,5 +20,6 @@ install:
 - npm install hexo-deployer-git --save
 - npm install hexo-generator-sitemap --save
 script:
+- hexo clean
 - hexo generate
 - hexo deploy
