--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,12 @@ branches:
   only:
   - master
 before_install:
+- openssl aes-256-cbc -K $encrypted_00bb88d476cb_key -iv $encrypted_00bb88d476cb_iv
+  -in vh1_rsa.enc -out vh1_rsa -d
+- chmod 600 ~/.ssh/vh1_rsa
+- eval $(ssh-agent)
+- ssh-add ~/.ssh/vh1_rsa
+- cp ssh_config ~/.ssh/config
 - git config --global user.name "VictoriaHong"
 - git config --global user.email "xin.victoria.hong@gmail.com"
 install:
@@ -17,13 +23,3 @@ script:
 - hexo clean
 - hexo generate
 - hexo deploy
-after_success:
-- mkdir .deploy
-- cd .deploy
-- git clone --depth 1 --branch gh-pages --single-branch $DEPLOY_REPO . || (git init && git remote add -t gh-pages origin $DEPLOY_REPO)
-- rm -rf ./*
-- cp -r ../public/* .
-- git add -A .
-- git commit -m 'Site updated'
-- git branch -m gh-pages
-- git push -q -u origin gh-pages
