--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,31 @@
 language: node_js
+
 node_js:
-- '0.12'
+- 0.12
+
 branches:
   only:
   - master
+
 before_install:
-- openssl aes-256-cbc -K $encrypted_00bb88d476cb_key -iv $encrypted_00bb88d476cb_iv
-  -in vh1_rsa.enc -out vh1_rsa -d
-- chmod 600 ~/.ssh/vh1_rsa
-- eval $(ssh-agent)
-- ssh-add ~/.ssh/vh1_rsa
-- cp ssh_config ~/.ssh/config
-- git config --global user.name "VictoriaHong"
-- git config --global user.email "xin.victoria.hong@gmail.com"
-install:
-- npm install hexo-cli -g
-- npm install
-- npm install hexo-generator-feed --save
-- npm install hexo-deployer-git --save
-- npm install hexo-generator-sitemap --save
+- npm install -g hexo-cli
+
+before_script:
+- git config --global user.name 'VictoriaHong'
+- git config --global user.email 'xin.victoria.hong@gmail.com'
+- git clone https://github.com/VictoriaHong/website_src.git blog/
+
 script:
-- hexo clean
+- hexo cleanß
 - hexo generate
-- hexo deploy
+
+after_success:
+- mkdir .deploy
+- cd .deploy
+- git clone --depth 1 --branch gh-pages --single-branch $DEPLOY_REPO . || (git init && git remote add -t gh-pages origin $DEPLOY_REPO)
+- rm -rf ./*
+- cp -r ../public/* .
+- git add -A .
+- git commit -m 'CI -> Site updated'
+- git branch -m gh-pages
+- git push -q -u origin gh-pages
